<resources>
    <string name="app_name">PetProject</string>
    <string name="title_activity_login">PetProject</string>
    <string name="prompt_email">Mail</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_verify_password">Verify password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_registered">Not Registered?</string>

    <string name="facebook_app_id">244100256971812</string>
    <string name="fb_login_protocol_scheme">fb244100256971812</string>
    <string name="sign_out">Button</string>

    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JoSzaki</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="mobile_number">Mobile number</string>

    <string name="prefLoginState">Loginstatus</string>
    <string name="logout">Logout</string>
    <string name="eventData">TextView</string>


</resources>
